feat(court): adicionar funcionalidade de preview e confirmação para criação de BlockedTimes